fix contrast in our-menu

--- a/src/styles/views-style/our-menu.css
+++ b/src/styles/views-style/our-menu.css
@@ -43,6 +43,7 @@ h2 {
     font-size: 4em;
     line-height: 1.2em;
     padding-bottom: 0.2em;
+    color: var(--color-primary);
 }
 .banner-menu p {
     font-size: 1.2em;
@@ -130,12 +131,49 @@ img {
     display: flex;
     flex-direction: column;
     padding: 1.5em;
+    width: 100%;
+    height: 100%;
+}
+
+#first-cap::before {
+    content: '';
+    position: absolute;
+    top: 0;
+    left: 0;
+    right: 0;
+    bottom: 0;
+    background: linear-gradient(to right, rgba(0, 0, 0, 0.9) 20%, rgba(0, 0, 0, 0) 70%);
+    z-index: 1; 
+}
+
+#second-cap::before {
+    content: '';
+    position: absolute;
+    top: 0;
+    left: 0;
+    right: 0;
+    bottom: 0;
+    background: linear-gradient(to left, rgba(0, 0, 0, 0.9) 20%, rgba(0, 0, 0, 0) 70%);
+    z-index: 1; 
+}
+
+.cap h3{
+    color: var(--color-primary);
+    z-index: 2;
+}
+
+.cap span{
+    z-index: 2;
+    max-width: 350px;
 }
 
 .bottom-left {
     bottom: 0;
     left: 0;
     text-align: left;
+    display: flex;
+    flex-direction: column;
+    justify-content: flex-end;
 }
 
 .top-right {
